# superterm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build  superterm.cfg  superterm.pro  superterm.qrc  superterm.qss  superterm.rc  uncrustify.bat  uncrustify.sh
contrib/singleapplication/: singleapplication.cpp
contrib/waitingspinnerwidget/: waitingspinnerwidget.h  waitingspinnerwidget.pri
emulator/: core  emulator.c  emulator2.c
languages/: superterm_de.ts
scripts/: build_cmake  build_qmake  tidycode.sh
src/: consolemgr.cpp  consolemgr.h  globals.cpp  globals.h  main.cpp  portenumerator.cpp  portenumerator.h
src/com/: connection.cpp  connection.h  serialconnection.cpp  serialconnection.h
src/enumerator/: portenumerator.cpp  portenumerator.h  serialportinfo.cpp
src/ipc/: message.cpp  message.h  messagecodec.cpp  messagecodec.h
src/misc/: defaultsettings.cpp  defaultsettings.h  globals.cpp  globals.h  softwareversion.cpp  softwareversion.h  uniqueidentifier.cpp  uniqueidentifier.h  updatechecker.cpp  updatechecker.h  usagetracker.cpp  usagetracker.h
src/models/: consoleline.cpp  consoleline.h  consolelinebuffer.cpp  consolelinebuffer.h  highlighting.h  highlightingsmodel.cpp  highlightingsmodel.h
src/port/: portapplication.cpp  portapplication.h  portendpoint.cpp  portendpoint.h
src/serial/: mockportapp.cpp  mockportapp.h  portapplication.cpp  portapplication.h  portendpoint.cpp  portendpoint.h  portenumerator.cpp  portenumerator.h  portobserver.cpp  portobserver.h  serialportinfo.cpp  serialportinfo.h
src/session/: serializableobject.cpp  serializableobject.h  session.cpp  session.h
src/ui/: connectionbar.cpp  connectionbar.h  connectionbar.ui  consoletab.cpp  consoletab.h  consoletab.ui  consoletab_BACKUP_5892.cpp  consoletab_LOCAL_5892.cpp  consoletab_REMOTE_5892.cpp  consoletabbar.cpp  consoletabbar.h  consoletabfactory.cpp  consoletabfactory.h  consoletabmenu.cpp  consoletabmenu.h  consoletabwidget.cpp  consoletabwidget.h  consoletabwidget.h.autosave  consoleview.cpp  consoleview.h  consoleview.ui  consoleviewex.cpp  consoleviewex.h  ghosttab.cpp  ghosttab.h  highlightingsframe.cpp  highlightingsframe.h  highlightingsframe.ui  highlightsframe.cpp  highlightsframe.h  highlightsframe.ui  logfilepanel.cpp  logfilepanel.h  logfilepanel.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newconnectiondialog.cpp  newconnectiondialog.h  newconnectiondialog.ui  (+22 more)
src/ui/consoleview/: consolelineitemdelegate.cpp  consolelineitemdelegate.h  consoleview.cpp  consoleview.h  consoleview.ui
src/ui/widgets/: clickablelabel.cpp  clickablelabel.h
tests/: consolelinebuffertests.cpp  highlightingsmodeltests.cpp  main.cpp  sessiontests.cpp  statusbarframetests.cpp  supertermtests.pro  supertermtests.pro.user.3ef155e
